boreal/tests/assets/invalid_files/parsing/str_to_int.yar
// [error: error converting to integer: number too large to fit in target type]
rule a {
    condition:
        10000000000000000000000000000
}
